<resources>
    <string name="app_name">CST-338-PROJECT-2</string>
    <string name="welcome_username">Welcome, [username]!</string>
    <string name="reports">Reports</string>
    <string name="events_Button">Events</string>
    <string name="logout_Button">Logout</string>
    <string name="vehicle">Vehicle</string>
    <string name="mileagem8_LP_Title">Mileage M8</string>
    <string name="admin_stuff">Admin Stuff</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="welcome_to_mileage_m8">Welcome to Mileage M8!</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="not_yet_registered_signup_now">Not Yet Registered? Signup Now</string>
    <string name="sharedprefrence_file_key">mileM8PreferenceFileNameMileoM8</string>
    <string name="preference_userId_key">mileM8PreferenceUserIdKeyMileM8</string>
    <string name="admin">Admin</string>
    <string name="preference_isAdmin_key">isAdmin</string>
    <string name="create_admin">Create Admin</string>
    <string name="delete_user">Delete User</string>
    <string name="create_user">Create User</string>
    <string name="update_password">Update Password</string>
    <string name="my_car">My Car</string>
    <string name="car_type">Car Type</string>
    <string name="total_expenses_0_00">Total Expenses: $0.00</string>
    <string name="total_miles_0_miles">Total Miles: 0 miles</string>
    <string name="total_trips_0">Total Trips: 0</string>
</resources>