<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluegradient"
    tools:context=".LandingActivity">


    <TextView
        android:id="@+id/welcome_Username"
        android:layout_width="407dp"
        android:layout_height="65dp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_username"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_LP_events"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_margin="35dp"
        android:backgroundTint="#002949"
        android:text="@string/events_Button"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_Username" />

    <Button
        android:id="@+id/button_LP_reports"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_margin="25dp"
        android:backgroundTint="#004B87"
        android:text="@string/reports"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_LP_events" />

    <Button
        android:id="@+id/button_LP_logout"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="#0091FF"
        android:text="@string/logout_Button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_LP_admin"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_LP_vehicles"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#006FC6"
        android:text="@string/vehicles"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_LP_reports" />

    <Button
        android:id="@+id/button_LP_admin"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#008FFF"
        android:text="@string/admin"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_LP_vehicles"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>